chapel-lang.org/docs/2.8/_sources/modules/packages/TOML/TomlParser.rst.txt
.. default-domain:: chpl

.. module:: TomlParser
   :synopsis: Parser module with the Toml class for the Chapel TOML library.

TomlParser
==========
**Usage**

.. code-block:: chapel

   use TOML.TomlParser;


or

.. code-block:: chapel

   import TOML.TomlParser;


Parser module with the Toml class for the Chapel TOML library.

.. data:: config const debugTomlParser = false

   Prints a line by line output of parsing process 

.. class:: Toml : writeSerializable

   
   Class to hold various types parsed from input
   used to recursively hold tables and respective values
   

   .. method:: proc init()

   .. method:: proc init(s: string)

   .. method:: proc init(A: [?D] shared Toml) where D.isAssociative()

   .. method:: proc init(ld: date)

   .. method:: proc init(ti: time)

   .. method:: proc init(dt: dateTime)

   .. method:: proc init(i: int)

   .. method:: proc init(boo: bool)

   .. method:: proc init(re: real)

   .. method:: proc init(arr: [?dom] shared Toml) where !dom.isAssociative()

   .. method:: proc init(lst: list(shared Toml))

   .. method:: proc init(root: Toml)

   .. method:: proc this(tblpath: string) ref: shared Toml? throws

      
      Returns the table element at the given table path.
      
      Since this method throws if the table path does not exist, it cannot
      be used to assign new values to new table paths.
      For that, use :proc:`set`.
      
      .. code-block:: chapel
      
         assert(myToml.pathExists("A"));
         myToml["A"] = ...; // OK, since "A" exists already
         myToml["B"] = ...; // ERROR, since "B" does not exist
         myToml.set("B", ...); // OK, since `set` creates "B"
      
      :throws TomlError: If the table path does not exist.
      

   .. method:: proc get(tblpath: string, const in default: shared Toml? = nil: shared Toml?): shared Toml?

      
      Returns the table element at the given table path,
      or the default value if not found.
      

   .. method:: proc set(tbl: string, toml: Toml) throws

      
      Set the table element at the given table path to the given value.
      
      :throws TomlError: If the parent table path does not exist. For example,
                         setting "a.b" when "a" does not exist will throw an
                         error.
      

   .. method:: proc set(tbl: string, s: string) throws

   .. method:: proc set(tbl: string, i: int) throws

   .. method:: proc set(tbl: string, b: bool) throws

   .. method:: proc set(tbl: string, r: real) throws

   .. method:: proc set(tbl: string, ld: date) throws

   .. method:: proc set(tbl: string, ti: time) throws

   .. method:: proc set(tbl: string, dt: dateTime) throws

   .. method:: proc set(tbl: string, A: [?D] shared Toml?) throws where D.isAssociative()

   .. method:: proc set(tbl: string, arr: [?dom] shared Toml?) throws where !dom.isAssociative()

   .. method:: override proc serialize(writer, ref serializer) throws

      
      Write a Table to channel f in TOML format.
      
      :throws TomlError: If an error occurred serializing the table, such as
                         due to missing values or unsupported types.
      

   .. method:: proc writeTOML(f)

      Write a Table to channel f in TOML format 

   .. method:: proc writeJSON(f)

      Write a Table to channel f in JSON format 

   .. method:: proc toString(): string

      
      For the user to write values of a node as follows:
      Toml[key].toString()
      

   .. method:: proc tomlType: string throws

      Return Toml type as a string.
      
      Valid types include:
      
      - *empty*
      - *string*
      - *integer*
      - *float*
      - *boolean*
      - *datetime*
      - *array*
      - *toml* (inline table)
      
      :throws TomlError: If this is not a known TOML type.
      
      

